# xnode-demo

./: README.md  flake.nix
example/: flake.nix
nix/: nixos-module.nix  nixos-test.nix  package.nix
rust-app/: Cargo.toml
rust-app/src/: main.rs
rust-app/src/demo/: handlers.rs  mod.rs  models.rs
rust-app/src/utils/: auth.rs  env.rs  error.rs  mod.rs  networking.rs  wallet.rs  xnode.rs
