[package]
name = "xnode-demo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
actix-web = "4.9.0"
ethsign = "0.9.0"
hex = "0.4.3"
log = "0.4.25"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
futures = "0.3.31"
