[package]
name = "xnode-demo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "cookies", "json"] }
actix-web = "4.9.0"
ethsign = "0.9.0"
hex = "0.4.3"
log = "0.4.25"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
env_logger = "0.11.6"
tiny-keccak = "2.0.2"
actix-cors = "0.7.0"
