[package]
name = "xnode-demo"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
ethsign = "0.9"
hex = "0.4"
log = "0.4"
rand = "0.9"
serde = "1"
serde_json = "1"
env_logger = "0.11"
tiny-keccak = "2.0"
actix-cors = "0.7"
futures = "0.3"
xnode-controller = "1.0"
xnode-manager-sdk = "1.0"
